Fixes cryptobud title alignment

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -75,7 +75,8 @@
     }
 
     .githublogo {
-        margin-right:3.5rem;
+        margin-right:1.2rem;
+        margin-left:2.6rem;
         }
     
 }
